fix: member photos added in landing page

--- a/esp.html
+++ b/esp.html
@@ -133,11 +133,11 @@
         <h1>EQUIPO DE DESARROLLO</h1>
 
         <div class="team-designer">
-            <div style="background-image: url('');"><h2>Gustavo</h2></div>
+            <div style="background-image: url('team-members/Gustavo.jpg');"><h2>Gustavo</h2></div>
             <div style="background-image: url('team-members/Paolo.jpg');"><h2>Paolo</h2></div>
-            <div style="background-image: url('');"><h2>Piero</h2></div>
+            <div style="background-image: url('team-members/Piero.jpg');"><h2>Piero</h2></div>
             <div style="background-image: url('team-members/Orlando.jpg');"><h2>Orlando</h2></div>
-            <div style="background-image: url('');"><h2>Antonella</h2></div>
+            <div style="background-image: url('team-members/Antonella.jpg');"><h2>Antonella</h2></div>
         </div>
     
     </section>
