--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
         <h1>TEAM DESIGNER</h1>
     
         <div class="team-designer">
-            <div style="background-image: url('');"><h2 aria-label="First member of the team">Gustavo</h2></div>
+            <div style="background-image: url('team-members/Gustavo.jpg');"><h2 aria-label="First member of the team">Gustavo</h2></div>
             <div style="background-image: url('team-members/Paolo.jpg');"><h2 aria-label="Second member of the team">Paolo</h2></div>
-            <div style="background-image: url('');"><h2 aria-label="Third member of the team">Piero</h2></div>
+            <div style="background-image: url('team-members/Piero.jpg');"><h2 aria-label="Third member of the team">Piero</h2></div>
             <div style="background-image: url('team-members/Orlando.jpg');"><h2 aria-label="Fourth member of the team">Orlando</h2></div>
-            <div style="background-image: url('');"><h2 aria-label="Five member of the team">Antonella</h2></div>
+            <div style="background-image: url('team-members/Antonella.jpg');"><h2 aria-label="Five member of the team">Antonella</h2></div>
         </div>
     
     </section>
